--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta name="theme-name" content="kross" />
   
   <!-- Favicon -->
-  <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
+  <link rel="shortcut icon" type="image/x-icon" href="images/favicon.jpg" />
   
   <!-- ** Plugins Needed for the Project ** -->
   <!-- Bootstrap -->
