--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
     <div class="collapse navbar-collapse text-center" id="navigation">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link section-title" href="index.html" style="font-size: 22px;">Home</a>
+          <a class="section-title" href="index.html" style="font-size: 20px;">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link section-title" href="about.html" style="font-size: 22px;">About</a>
+          <a class="section-title" href="about.html" style="font-size: 20px;">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link section-title" href="portfolio.html" style="font-size: 22px;">Work</a>
+          <a class="section-title" href="portfolio.html" style="font-size: 20px;">Work</a>
         </li>
       </ul>
     </div>
