--- a/about.html
+++ b/about.html
@@ -58,13 +58,13 @@
     <div class="collapse navbar-collapse text-center" id="navigation">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="about.html">about</a>
+          <a class="section-title" href="index.html" style="font-size: 22px;">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="portfolio.html">Portfolio</a>
+          <a class="section-title" href="about.html" style="font-size: 22px;">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="section-title" href="portfolio.html" style="font-size: 22px;">Work</a>
         </li>
       </ul>
     </div>
