--- a/portfolio.html
+++ b/portfolio.html
@@ -128,6 +128,24 @@
 </section>
 <!-- /portfolio -->
 
+ <!-- experiments -->
+<section class="section">
+  <div class="container">
+    <div class="row">
+      <div class="col-12 text-center">
+        <h2 class="section-title">Experiments</h2>
+      </div>
+    </div>
+      <div id="widget-container" style="width: 650px; height: 650px;background-color: #f9e79f; border-radius: 16px;
+  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15); padding: 16px; display: flex; justify-content: center; align-items: center;">
+    <div id="my-react-widget"></div>
+      <link rel="stylesheet" href="static/css/main.e6c13ad2.css" />
+      <script defer="defer" src="static/js/main.89cfd9b4.js"></script>
+    </div>
+  </div>
+</section>
+<!-- /experiments -->
+
 <!-- footer -->
 <footer class="bg-dark footer-section">
   <div class="container">
