--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta name="theme-name" content="kross" />
   
   <!-- Favicon -->
-  <link rel="shortcut icon" type="image/x-icon" href="images/favicon.jpg" />
+  <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
   
   <!-- ** Plugins Needed for the Project ** -->
   <!-- Bootstrap -->
@@ -48,13 +48,13 @@
     <div class="collapse navbar-collapse text-center" id="navigation">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="section-title" href="index.html" style="font-size: 22px;">Home</a>
+          <a class="nav-link section-title" href="index.html" style="font-size: 22px;">Home</a>
         </li>
         <li class="nav-item">
-          <a class="section-title" href="about.html" style="font-size: 22px;">About</a>
+          <a class="nav-link section-title" href="about.html" style="font-size: 22px;">about</a>
         </li>
         <li class="nav-item">
-          <a class="section-title" href="portfolio.html" style="font-size: 22px;">Work</a>
+          <a class="nav-link section-title" href="portfolio.html" style="font-size: 22px;">Portfolio</a>
         </li>
       </ul>
     </div>
