--- a/portfolio.html
+++ b/portfolio.html
@@ -87,7 +87,7 @@
         <a href="#" class="portfolio-square">
           <div class="square-content">
             <div class="logo-container">
-              <img src="images/portfolio/OM.jpg" alt="Optimum Media" class="company-logo">
+              <img src="images/experience/OM.jpg" alt="Optimum Media" class="company-logo">
             </div>
             <h4 class="project-title">Revenue Insights App</h4>
           </div>
@@ -97,7 +97,7 @@
         <a href="#" class="portfolio-square">
           <div class="square-content">
             <div class="logo-container">
-              <img src="images/portfolio/OM.jpg" alt="Optimum Media" class="company-logo">
+              <img src="images/experience/OM.jpg" alt="Optimum Media" class="company-logo">
             </div>
             <h4 class="project-title">Digital Share Reporting</h4>
           </div>
@@ -107,7 +107,7 @@
         <a href="#" class="portfolio-square">
           <div class="square-content">
             <div class="logo-container">
-              <img src="images/portfolio/OM.jpg" alt="Optimum Media" class="company-logo">
+              <img src="images/experience/OM.jpg" alt="Optimum Media" class="company-logo">
             </div>
             <h4 class="project-title">Revenue Comparison Tool</h4>
           </div>
@@ -117,7 +117,7 @@
         <a href="#" class="portfolio-square">
           <div class="square-content">
             <div class="logo-container">
-              <img src="images/portfolio/OM.jpg" alt="Optimum Media" class="company-logo">
+              <img src="images/experience/OM.jpg" alt="Optimum Media" class="company-logo">
             </div>
             <h4 class="project-title">Revenue Projection Automation</h4>
           </div>
