--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-8">
-        <p class="text-white">II'm a data analyst passionate about transforming complex data into clear, compelling insights 
+        <p class="text-white">I'm a data analyst passionate about transforming complex data into clear, compelling insights 
           that fuel business growth and smarter decisions. I thrive at the intersection of data strategy 
           and storytelling, helping teams unlock the full potential of their information.
           </p>
